--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -4,14 +4,37 @@ body {
 	color: #222;
 	background-color: #fff;
 	width: 320px;
-	height: 100%;
+	height: 500px;
 	overflow-block: auto;
 	overflow-inline: hidden;
 	margin: 0;
+	display: grid;
+	grid-template-rows: max-content 1fr max-content;
 }
 
-a {
+a, button {
 	color: #0033cc;
+	background-color: transparent;
+	border: none;
+	appearance: none;
+}
+
+a:active, button:active {
+	opacity: .75;
+}
+
+input, button, select, textarea {
+	font: inherit;
+	display: block;
+	box-sizing: border-box;
+	margin: 0;
+	inline-size: 100%;
+}
+
+button {
+	padding-inline: 1em;
+	padding-block: .5em;
+	text-align: start;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -19,35 +42,162 @@ a {
 		color: #eee;
 		background-color: #121212;
 	}
-	a {
+	a, button {
 		color: #809fff;
 	}
 }
 
-#menuList {
+#searchbox-container {
+	border-block-end: solid .125rem #888;
+	display: block grid;
+	grid-template-columns: max-content 1fr;
+}
+
+#searchbox-container::before {
+	background-image: url(/img/search_black_24dp.svg);
+	content: '';
+	background-repeat: no-repeat;
+	background-size: 1.5em;
+	background-position: center center;
+	block-size: 2em;
+	inline-size: 2em;
+}
+
+#searchbox-input {
+	appearance: none;
+	background-color: transparent;
+	border: none;
+	color: inherit;
+	padding-block: .5em;
+	padding-inline: .25em;
+	outline: none;
+}
+
+#main {
+	overflow: auto;
+}
+
+#bottombox {
+	border-block-start: solid .125rem #888;
+}
+
+#button-new-container {
+	display: block grid;
+	grid-template-columns: max-content 1fr;
+}
+
+#button-new-container::before {
+	background-image: url(/img/add_black_24dp.svg);
+	content: '';
+	background-repeat: no-repeat;
+	background-size: 1.5em;
+	background-position: center center;
+	block-size: 1em;
+	inline-size: 2em;
+}
+
+#menuList, #menuList ul {
 	list-style: none;
 	margin: 0;
 	padding: 0;
 }
 
 #menuList > li {
-	padding-block-start: .25em;
-	padding-block-end: .25em;
-	padding-inline-end: 1em;
-	padding-inline-start: 2.25em;
+	padding: 0;
+	margin: 0;
 	background-repeat: no-repeat;
 	background-size: 1.5em;
 	background-position: .5em center;
 	background-image: none;
-	min-inline-size: max-content;
 }
 
-#menuList > li:hover, #domains > li:active {
+.tab:hover, button:hover {
 	background-color: rgba(0, 0, 0, .1);
+}
+
+#menuList .tab {
+	display: block grid;
+	grid-template-columns: 2em 2em 1fr;
+	margin-inline-start: calc(2em - 0.25em);
+	border-inline-start: solid .25rem transparent;
+}
+
+.tab-label, .container-label {
+	padding-inline: .5em;
+	padding-block: .5em;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
+
+.tab-icon {
+	inline-size: 75%;
+	align-self: center;
+	justify-self: center;
+}
+
+.tab-icon.img-error {
+	visibility: hidden;
+}
+
+.tab::before {
+	content: '';
+	background-size: 1.5em;
+	background-repeat: no-repeat;
+	background-position: center center;
+}
+
+.tab-pinned::before {
+	background-image: url(/img/push_pin_black_24dp.svg);
 }
 
 #menuList > li.checked {
 	background-image: url('/img/done-black-18dp.svg');
+}
+
+.container {
+	display: block grid;
+	grid-template-columns: 2em 2em 1fr;
+}
+
+.container::before {
+	content: '';
+	background-size: 1.5em;
+	background-repeat: no-repeat;
+	background-position: center center;
+}
+
+.container-visible::before {
+	background-image: url(/img/expand_less_black_24dp.svg);
+}
+
+.container-hidden::before {
+	background-image: url(/img/expand_more_black_24dp.svg);
+}
+
+.container-icon {
+	inline-size: 75%;
+	align-self: center;
+	justify-self: center;
+}
+
+.container-icon.img-error {
+	background-size: 100% 100%;
+	background-repeat: no-repeat;
+	background-image: url(/img/category_black_24dp.svg);
+}
+
+.container-label {
+	font-weight: bold;
+	padding-inline: .5em;
+	padding-block: .5em;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
+
+.container > .container-tabs {
+	grid-column: 1 / -1;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -55,8 +205,20 @@ a {
 		background-image: url('/img/done-white-18dp.svg');
 	}
 
-	#menuList > li:hover, #menuList > li:active {
+	.tab:hover, button:hover {
 		background-color: rgba(255, 255, 255, .1);
+	}
+
+	#searchbox-container::before {
+		background-image: url(/img/search_white_24dp.svg);
+	}
+
+	#button-new-container::before {
+		background-image: url(/img/add_white_24dp.svg);
+	}
+
+	.container-icon.img-error {
+		background-image: url(/img/category_white_24dp.svg);
 	}
 }
 
