--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -128,6 +128,10 @@ button {
 	white-space: nowrap;
 }
 
+.tab-discarded .tab-label {
+	opacity: .75;
+}
+
 .tab-icon {
 	inline-size: 75%;
 	align-self: center;
