keep scroll position on popup

--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -72,6 +72,12 @@ button {
 
 #main {
 	overflow: auto;
+	transition: opacity .1s ease-in;
+}
+
+#main.rendering {
+	opacity: .5;
+	transition: none;
 }
 
 #bottombox {
