--- a/src/components/usercontext.css
+++ b/src/components/usercontext.css
@@ -1,4 +1,4 @@
-/* vim: ts=2 et ai */
+/* vim: ts=2 sw=2 et ai */
 /* This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this file,
  * You can obtain one at http://mozilla.org/MPL/2.0/. */
