--- a/src/panorama/panorama.css
+++ b/src/panorama/panorama.css
@@ -17,8 +17,15 @@
   along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */
 
-:root {
-  --secondary-background-color: #eee;
+@import url(/theme.css);
+
+body {
+  background-color: var(--background-color);
+  color: var(--text-color);
+}
+
+button {
+  color: inherit;
 }
 
 #containers {
@@ -54,8 +61,8 @@
   background-color: var(--secondary-background-color);
   overflow: auto;
   column-gap: 2rem;
-  box-shadow: inset 0 0 1rem #888;
-  border: solid .125rem #888;
+  box-shadow: inset 0 0 1rem var(--border-color);
+  border: solid .125rem var(--border-color);
 }
 
 .container-tabs > * {
@@ -70,16 +77,21 @@
   display: grid;
   justify-content: center;
   align-content: end;
-  padding: .5rem;
-  inline-size: 16rem;
-  min-block-size: 9rem;
-  box-sizing: border-box;
   appearance: none;
   border: none;
   background-color: transparent;
   font: inherit;
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: 40%;
-  background-image: url(/img/add_black_24dp.svg);
+  box-sizing: border-box;
+  padding: .5rem;
+  text-align: center;
+}
+
+.container-new-tab::before {
+  display: block;
+  content: '';
+	mask: url(/img/add_black_24dp.svg) center center/40% no-repeat;
+	background-color: var(--text-color);
+  inline-size: 16rem;
+  min-block-size: 9rem;
+  box-sizing: border-box;
 }
