--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -132,7 +132,7 @@ button {
 
 #topbox {
 	display: block grid;
-	grid-template-columns: 1fr max-content;
+	grid-template-columns: 1fr max-content max-content;
 	grid-template-rows: 2.5em;
 	padding-inline-start: 1em;
 }
@@ -171,13 +171,19 @@ button {
 	background-color: var(--text-color);
 }
 
-#button-panorama > .button-text {
-	display: none;
+#button-new-container {
+	background-repeat: no-repeat;
+	background-size: 1.5em;
+	background-position: center center;
+	block-size: 100%;
+	inline-size: 2.5em;
+	color: inherit;
+	mask: url(/img/add_black_24dp.svg) center center/75% no-repeat;
+	background-color: var(--text-color);	
 }
 
-#button-new-container::before {
-	mask: url(/img/add_black_24dp.svg) center center/contain no-repeat;
-	background-color: var(--text-color);
+#button-panorama > .button-text, #button-new-container > .button-text {
+	display: none;
 }
 
 #button-hide-inactive::before {
