--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -33,7 +33,7 @@ body {
 	overflow-inline: hidden;
 	margin: 0;
 	display: grid;
-	grid-template-rows: max-content 1fr max-content;
+	grid-template-rows: 1fr max-content;
 	position: relative;
 }
 
@@ -94,9 +94,24 @@ button {
 	outline: none;
 }
 
-#main {
+.content {
+	display: none;
+}
+
+.content:target {
+	display: grid;
+}
+
+#main-inner {
 	overflow: auto;
+	block-size: 100%;
+}
+
+#main {
 	transition: opacity .1s ease-in;
+	grid-template-rows: max-content 1fr;
+	block-size: 100%;
+	overflow: auto;
 }
 
 #main.rendering {
@@ -202,6 +217,59 @@ button {
 #button-settings::before {
 	mask: url(/img/settings_black_24dp.svg) center center/75% no-repeat;
 	background-color: var(--text-color);
+}
+
+#bottom-menu {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
+}
+
+#bottom-menu > .menu-item {
+	display: block;
+	text-align: center;
+	color: inherit;
+	text-decoration: none;
+	margin-block: .5rem;
+	opacity: .5;
+}
+
+#bottom-menu > .menu-item::before {
+	display: block;
+	content: '';
+	inline-size: 1.5rem;
+	block-size: 1.5rem;
+	background-color: var(--text-color);
+	margin: auto;
+}
+
+#bottom-menu > #menu-item-main::before {
+	mask: url(/img/folder_black_24dp.svg) center center/75% no-repeat;
+}
+
+#bottom-menu > #menu-item-sites::before {
+	mask: url(/img/public_black_24dp.svg) center center/75% no-repeat;
+}
+
+#bottom-menu > #menu-item-windows::before {
+	mask: url(/img/window_black_24dp.svg) center center/75% no-repeat;
+}
+
+[data-active-content="main"] #menu-item-main {
+	opacity: 1;
+}
+
+[data-active-content="windows"] #menu-item-windows {
+	opacity: 1;
+}
+
+[data-active-content="sites"] #menu-item-sites {
+	opacity: 1;
+}
+
+#bottom-menu > .menu-item > .button-text {
+	display: block;
+	padding: 0;
 }
 
 #menuList, #menuList ul {
