--- a/src/sidebar/sidebar.css
+++ b/src/sidebar/sidebar.css
@@ -1,6 +1,6 @@
-<!-- vim: set ts=4 noet ai :
+/* vim: set ts=4 noet ai :
 	Container Tab Groups
-	Copyright (C) 2021 Menhera.org
+	Copyright (C) 2022 Menhera.org
 
 	This program is free software: you can redistribute it and/or modify
 	it under the terms of the GNU General Public License as published by
@@ -14,14 +14,24 @@
 
 	You should have received a copy of the GNU General Public License
 	along with this program.  If not, see <https://www.gnu.org/licenses/>.
--->
-<!DOCTYPE html>
-<html xmlns='http://www.w3.org/1999/xhtml' lang='en'>
-	<head>
-		<meta charset='utf-8'/>
-		<title>browserActionPopupTitle</title>
-		<link rel='stylesheet' href='popup.css'/>
-		<script type='module' src='popup.mjs'></script>
-	</head>
-	<body></body>
-</html>
+*/
+
+@import url(/popup/popup.css);
+
+:root {
+	inline-size: 100%;
+	block-size: 100%;
+	display: flex;
+	flex-direction: column;
+}
+
+body {
+	flex-grow: 1;
+}
+
+#button-sidebar {
+	inline-size: 0 !important;
+	padding-inline: 0;
+	overflow: hidden;
+	box-sizing: border-box;
+}
