--- a/static/css/components/menulist-tab.css
+++ b/static/css/components/menulist-tab.css
@@ -146,6 +146,7 @@ button:focus {
 
 #tab-button.active {
   font-weight: bold;
+  box-shadow: inset 0 0 8px 2px rgba(0, 150, 255, 0.4);
 }
 
 #tab-button:hover, #tab-button:focus {
